HaloMythic3dot5.css
/* ... */
.sheet-minimisable_infographic_grid{
	display: grid;
	grid-template-columns: 110px 110px 110px 230px 230px
}
.sheet-wounds_width { width: 50px;}
.sheet-Fatigue_width { width: 45px;}
.sheet-luck_width { width: 26px;}
.sheet-shields_width { width: 50px;}
.sheet-armor_width { width: 40px;}

.sheet-minimisable_infographic_g1{grid-area: mi1; justify-self: center; color:white; text-align: left!important;font-family: Saira Semi Condensed; background:#506b95}
.sheet-minimisable_infographic_g2{grid-area: mi2; justify-self: right; margin-right: 3px; margin-top: 3px; color:white; font-family: Saira Semi Condensed }
.sheet-minimisable_infographic_g3{grid-area: mi3; border-right: 1px solid #394C6A;}
.sheet-minimisable_infographic_g4{grid-area: mi4; justify-self: right; margin-right: 3px; margin-top: 3px;  color:white; font-family: Saira Semi Condensed }
.sheet-minimisable_infographic_g5{grid-area: mi5; border-right: 1px solid #394C6A; border-bottom: 1px solid #394C6A; border-bottom-right-radius: 10px}
.sheet-minimisable_infographic_field2x3{
	margin-right: 10px;
	background:#506b95;
	display: grid;
	grid-template-columns: 50px 50px;
	grid-template-rows: 25px 25px 25px;
	grid-template-areas:
	'mi1 mi1'
	'mi2 mi3'
	'mi4 mi5'
}

.sheet-minimisable_infographic_g6{grid-area: mi6; justify-self: right; margin-right: 3px; margin-top: 3px;  color:white; font-family: Saira Semi Condensed }
.sheet-minimisable_infographic_g7{grid-area: mi7; }
.sheet-minimisable_infographic_g8{grid-area: mi8; justify-self: right; margin-right: 3px; margin-top: 3px;  color:white; font-family: Saira Semi Condensed }
.sheet-minimisable_infographic_g9{grid-area: mi9; border-bottom: 1px solid #394C6A;}
.sheet-minimisable_infographic_field4x3{
	margin-right: 10px;
	background:#506b95;
	display: grid;
	grid-template-columns: 55px 55px 55px 55px;
	grid-template-rows: 25px 25px 25px;
	grid-template-areas:
	'mi1 mi1 mi1 mi1'
	'mi6 mi7 mi2 mi3'
	'mi8 mi9 mi4 mi5'
}

.sheet-minimisable_infographic_expand,
.sheet-minimisable_switch:checked ~ .sheet-minimisable_infographic_collapse { color: black; display: block; font-weight: bold }

.sheet-minimisable_infographic_collapse,
.sheet-minimisable_switch:checked ~ .sheet-minimisable_infographic_expand { display: none }

/* ______________________________ end of minimisable infographic ______________________________
______________________________ start of core tab ______________________________ */

.sheet-core_lists1 { grid-area: cl1; margin-right: 10px }
.sheet-core_lists2 { grid-area: cl2; margin-bottom: 5px;}
.sheet-core_lists3 { grid-area: cl3; margin-top: 5px}
.sheet-core_lists {
	display: grid;
	grid-template-areas:
	'cl1 cl2'
	'cl1 cl3';
	grid-template-columns: 400px auto;
}
.sheet-core_table {
	background: #506b95;
	color: white;
	font-family: Saira Semi Condensed;
}

.sheet-skills_row {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	height: 30px;
	align-items: center;
	border-bottom: 1px dotted grey;
}

.sheet-skills_item { margin: 7px 5px }
.sheet-skills_text { margin: 4px 0px }
.sheet-text_left { text-align: left!important; }

.sheet-skill_header {
	display: grid;
	margin-top: 7px;
	grid-template-columns: auto 25px 63px 59px 21px 30px 38px 30px;
	grid-template-rows: 23px;
	border-bottom: 1px dotted darkgrey;
}

.sheet-skill_grid {
	display: grid;
	grid-template-columns: auto 53px 59px 50px 30px 30px 30px 35px;
	grid-template-rows: 27px;
	border-bottom: 1px dotted darkgrey;
	padding-bottom: 1.5px;
	padding-top: 1.5px;

}
.sheet-education_grid {
	display: grid;
	grid-template-columns: auto 63px 55px 30px 30px 35px;
	grid-template-rows: 27px;
	border-bottom: 1px dotted darkgrey;
	padding-bottom: 1.5px;
	padding-top: 1.5px;
}

.sheet-education_header {
	display: grid;
	margin-top: 7px;
	grid-template-columns: auto 63px 55px 25px 38px 30px;
	grid-template-rows: 23px;
	border-bottom: 1px dotted darkgrey;
}

.sheet-education_grid {
	display: grid;
	grid-template-columns: auto 63px 55px 30px 30px 35px;
	grid-template-rows: 27px;
	border-bottom: 1px dotted darkgrey;
	padding-bottom: 1.5px;
	padding-top: 1.5px;

}





/* ______________________________ end of core tab ______________________________
______________________________ start of equipment tab ______________________________ */
.sheet-equipment_ranged_weapons{grid-area: e1}
.sheet-equipment_melee_weapons{ grid-area: e2}
.sheet-equipment_items_list{		grid-area: e3}

.sheet-equipment_divider {
	font-size: 18px;
	display: grid;
	grid-template-columns: auto 10px auto;
	grid-template-areas:
	'e1 e0 e2'
	'e3 e3 e3';

}


/* ______________________________ end of equipment tab ______________________________
______________________________ start of medical tab ______________________________ */

.sheet-medicalG {
	background: #475f85;
	border-left: 15px solid #475f85;
	border-right: 15px solid #475f85;
	color: white;
	font-family: Saira Semi Condensed
}

.sheet-medicalg1 { grid-area: m1; border-top-left-radius: 10px;}
.sheet-medicalg2 { grid-area: m2; }
.sheet-medicalg3 { grid-area: m3; border-top-right-radius: 10px;}
.sheet-medicalg4 { grid-area: m4; }
.sheet-medicalg5 { grid-area: m5; }
.sheet-medicalg6 { grid-area: m6; }
.sheet-medicalg7 { grid-area: m7; }
.sheet-medicalg8 { grid-area: m8; }
.sheet-medicalg9 { grid-area: m9; }
.sheet-medicalg10 { grid-area: m10; }
.sheet-medicalg11 { grid-area: m11; }
.sheet-medicalg12 { grid-area: m12; }
.sheet-medicalg13 { grid-area: m13; }
.sheet-medicalg14 { grid-area: m14; }
.sheet-medicalg15 { grid-area: m15; border-bottom-left-radius: 10px;}
.sheet-medicalg16 { grid-area: m16; }
.sheet-medicalg17 { grid-area: m17; border-bottom-right-radius: 10px;}
.sheet-medicalgT { grid-area: mT; margin-left: 10px;}
.sheet-medicalgR { grid-area: mR; margin-top: 10px;}
/* ... */

